WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218664
Fix build after adding files to UIProcess/API/Cocoa
https://bugs.webkit.org/show_bug.cgi?id=218664
Summary
Fix build after adding files to UIProcess/API/Cocoa
Alex Christensen
Reported
2020-11-06 11:12:51 PST
Fix build after adding files to UIProcess/API/Cocoa
Attachments
Patch
(4.08 KB, patch)
2020-11-06 11:15 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-11-06 11:15:30 PST
Created
attachment 413448
[details]
Patch
Alex Christensen
Comment 2
2020-11-06 12:22:17 PST
Comment on
attachment 413448
[details]
Patch
http://trac.webkit.org/r269529
Radar WebKit Bug Importer
Comment 3
2020-11-06 12:23:17 PST
<
rdar://problem/71129078
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug