Fix build after adding files to UIProcess/API/Cocoa https://bugs.webkit.org/show_bug.cgi?id=218664

There is some code that assumes that unified sources always combine sources into the same translation units.
inspectorWebView is used from _WKInspectorTesting.mm, but only defined in _WKInspector.mm so it should be added to a header.
_WKUserContentWorld also doesn't include WKObject.h or RetainPtr.h but uses both.

* UIProcess/API/Cocoa/_WKInspector.mm:
(-[_WKInspector inspectorWebView]): Deleted.
* UIProcess/API/Cocoa/_WKInspectorPrivateForTesting.h:
* UIProcess/API/Cocoa/_WKInspectorTesting.mm:
(-[_WKInspector inspectorWebView]):
* UIProcess/API/Cocoa/_WKUserContentWorldInternal.h:



Canonical link: https://commits.webkit.org/231324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269529 268f45cc-cd09-0410-ab3c-d52691b4dbfc