Source/WebKit/UIProcess/API/Cocoa/_WKInspectorTesting.mm
@@ -25,7 +25,7 @@
 
 #import "config.h"
 
-#import "WKWebView.h"
+#import "WKWebViewInternal.h"
 #import "_WKInspectorInternal.h"
 #import "_WKInspectorPrivateForTesting.h"
 
@@ -38,6 +38,13 @@ static NSString *JavaScriptSnippetToOpenURLExternally(NSURL *url)
 }
 
 @implementation _WKInspector (WKTesting)
+
+- (WKWebView *)inspectorWebView
+{
+    if (auto* page = _inspector->inspectorPage())
+        return fromWebPageProxy(*page);
+    return nil;
+}
 
 - (void)_openURLExternallyForTesting:(NSURL *)url useFrontendAPI:(BOOL)useFrontendAPI
 {
